--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2",
     "sass": "^1.49.9"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-preset-react-app": "^10.0.1",
+    "jest": "^27.5.1",
     "vite": "^2.8.0"
   }
 }
