--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
@@ -17,7 +18,10 @@
     "sass": "^1.49.9"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.0",
     "@vitejs/plugin-react": "^1.0.7",
     "babel-preset-react-app": "^10.0.1",
     "jest": "^27.5.1",
