--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.0-beta.4",
     "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "sass": "^1.49.9"
   },
   "devDependencies": {
